<resources>
    <string name="app_name">Dictionary APP</string>
    <string name="word">Word:</string>
    <string name="meanings">Meanings</string>
    <string name="synonyms">Synonyms</string>
    <string name="example">Example:</string>
    <string name="definition">Definition:</string>
    <string name="antonyms">Antonyms</string>
    <string name="search_words">Search words..</string>
    <string name="no_example_avaliable">" No Example avaliable"</string>
    <string name="exclanatory">Exclanatory</string>
    <string name="saved_words">Saved Words</string>
    <string name="delete">Delete</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="language">Language</string>
    <string name="sign_out">Sign Out</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="save_word">Save Word</string>
</resources>