<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_saved_words"
        android:title="@string/saved_words"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_language"
        android:title="@string/language"
        android:icon="@drawable/icons8_earth_50">
        <menu>

            <item
                android:id="@+id/menu_language_english"
                android:title="@string/english"
                android:icon="@drawable/icons8_english_48"></item>
            <item
                android:id="@+id/menu_language_vietnamese"
                android:title="@string/vietnamese"
                android:icon="@drawable/icons8_vietnam_48"></item>
        </menu>
    </item>
    <item
        android:id="@+id/menu_sign_out"
        android:title="@string/sign_out"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>