<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/black"
    app:cardCornerRadius="8dp"
    android:layout_margin="6dp"
    app:cardElevation="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView_defitions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/definition"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textView_example"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/example"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/synonyms"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold"
            android:layout_margin="6dp"/>
        <TextView
            android:id="@+id/textView_synonyns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:textStyle="italic"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="4dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/antonyms"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold"
            android:layout_margin="6dp"/>
        <TextView
            android:id="@+id/textView_antonyms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:textStyle="italic"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="4dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24dp"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>